# openmiura

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  PUBLIC_RELEASE_AUDIT.md  README.md  RELEASE_NOTES_RC1.md  SECURITY.md  app.py  arrancar_openmiura.txt  conftest.py  docker-compose.yml  github_repo_release_and_security_guide.md  pyproject.toml  pytest_first_fail.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
configs/: agents.yaml  evaluations.yaml  openmiura.yaml  policies.yaml
docker/: entrypoint.sh
docs/: README.md  ROADMAP_24M_PRODUCT_STRATEGY.md  alpha_release_checklist.md  architecture_phase1_refactor.md  backup_restore.md  channel-config-examples.md  ci_cd.md  configuration_profiles.md  deployment.md  enterprise_alpha.md  extensions_registry.md  extensions_sdk.md  github_pr_merge_publish_checklist.md  installation.md  llm_providers.md  mcp.md  mcp_broker_integration.md  migrations.md  observability.md  openMiura_agent_control_plane.md  openMiura_one_pager_commercial.docx  openMiura_one_pager_commercial.md  phase1_phase2_audit.md  phase1_phase4_audit_round4.md  phase1_phase4_audit_round5.md  phase1_phase4_audit_round6.md  phase1_phase4_audit_round7.md  phase1_phase4_audit_round8.md  phase1_phase5_audit_round10.md  phase1_phase5_audit_round11.md  phase1_phase5_audit_round12.md  phase1_phase5_audit_round13.md  phase1_phase5_audit_round9.md  phase1_phase6_audit_round14.md  phase1_phase6_audit_round15.md  phase1_phase6_audit_round16.md  phase1_phase6_audit_round17.md  phase1_phase7_audit_round18.md  phase1_phase7_audit_round19.md  phase1_phase7_audit_round20.md  (+72 more)
openmiura/: __init__.py  __main__.py  cli.py  commands.py  gateway.py  observability.py  pipeline.py  realtime.py
scripts/: build_release_artifacts.py  check_db.py  check_memory_user.py  check_tools.py  discord_worker.py  encrypt_memory.py  fire_test_alerts.py  freeze_release_candidate.py  memory_clean.py  openclaw_alert_delivery_worker.py  openclaw_recovery_worker.py  package_phase8_shell.py  reproducible_package.py  (+6 more)
(+420 files in other folders)
